pictures extention changed png to jpeg

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!---header section start-->
     <header>
-        <a href="#" class="logo"><img src="C:\Users\rgcsm\Desktop\Website-Media-Files\navbar\logo.jpeg" alt=""></a>
+        <a href="#" class="logo"><img src="C:\Users\rgcsm\Desktop\Website-Media-Files\navbar\logo.jpg" alt=""></a>
 
         <nav class="navbar">
             <a href="#home" class="active">home</a>
@@ -36,7 +36,7 @@
             <div class="swiper-wrapper wrapper">
                 <div class="swiper-slide slide slide1">
                     <div class="content">
-                        <img src="crown-symbol.jpeg">
+                        <img src="crown-symbol.jpg">
                         <h3>delicious royate</h3>
                         <h1>gift voucher</h1>
                         <p>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="swiper-slide slide slide2">
                     <div class="content">
-                        <img src="crown-symbol.jpeg">
+                        <img src="crown-symbol.jpg">
                         <h3>sale of 10% this dish</h3>
                         <h1>the fresh</h1>
                         <p>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="swiper-slide slide slide3">
                     <div class="content">
-                        <img src="crown-symbol.jpeg">
+                        <img src="crown-symbol.jpg">
                         <h3>We are open</h3>
                         <h1>fresh fruits</h1>
                         <p>
@@ -125,7 +125,7 @@
             <div class="item">
                 <div class="item-name">
                     <h2>Main Course</h2>
-                    <img src="drinks.jpeg" alt="">
+                    <img src="drinks.jpg" alt="">
                 </div>
                 <div class="item-body">
                     <div class="item-menu">
@@ -159,7 +159,7 @@
             <div class="item">
                 <div class="item-name">
                     <h2>Soups & Salads</h2>
-                    <img src="drinks.jpeg" alt="">
+                    <img src="drinks.jpg" alt="">
                 </div>
                 <div class="item-body">
                     <div class="item-menu">
@@ -193,7 +193,7 @@
             <div class="item">
                 <div class="item-name">
                     <h2>Drinks</h2>
-                    <img src="drinks.jpeg" alt="">
+                    <img src="drinks.jpg" alt="">
                 </div>
                 <div class="item-body">
                     <div class="item-menu">
@@ -227,7 +227,7 @@
             <div class="item">
                 <div class="item-name">
                     <h2>Desserts</h2>
-                    <img src="drinks.jpeg" alt="">
+                    <img src="drinks.jpg" alt="">
                 </div>
                 <div class="item-body">
                     <div class="item-menu">
@@ -370,7 +370,7 @@
                     <p>nor again is there anymore who loves or persues or desires to
                         obtain pain of itself,because it is pain,but because occasionally,circumstances occur.</p>
                         <a href="#">READ MORE</a>
-                        <img src="post-body-bg-1.jpeg" alt="Error:404 not found">
+                        <img src="post-body-bg-1.jpg" alt="Error:404 not found">
                 </div>
             </div>
             <!--2nd content-->
@@ -383,7 +383,7 @@
                     <p>nor again is there anymore who loves or persues or desires to
                         obtain pain of itself,because it is pain,but because occasionally,circumstances occur.</p>
                         <a href="#">READ MORE</a>
-                        <img src="post-body-bg-2.jpeg" alt="Error:404 not found">
+                        <img src="post-body-bg-2.jpg" alt="Error:404 not found">
                 </div>
             </div>
             <!--3rd content-->
@@ -396,7 +396,7 @@
                     <p>nor again is there anymore who loves or persues or desires to
                         obtain pain of itself,because it is pain,but because occasionally,circumstances occur.</p>
                         <a href="#">READ MORE</a>
-                        <img src="post-body-bg-3.jpeg" alt="Error:404 not found">
+                        <img src="post-body-bg-3.jpg" alt="Error:404 not found">
                 </div>
             </div>
         </div>
@@ -404,7 +404,7 @@
     <!--new section ends-->
     <!--footer section start-->
     <section class="footer">
-        <img src="logo.jpeg" alt="error:404 not found" class="logo">
+        <img src="logo.jpg" alt="error:404 not found" class="logo">
         <div class="container">
             <div>
                 <h3>ABOUT US</h3>
